tests/fixtures/invalid/pow_float_bool_set.py
# Cannot call pow() with Float, Bool, Set[int]
x = pow(1.0, True, {1, 2, 3})
